entregable proyecto final 2

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,1 +1,6 @@
+$card-height: 20rem;
+$caret-width: 10rem;
 
+$primary: rgba(0, 0, 0, 0.775);
+
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
