--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,3 @@
-@use "../node_modules/bootstrap/scss/bootstrap.scss";
-@use '../scss/custom';
+@use 'custom';
+@use '../scss/_partials/cards';
 @import "./_partials/resets";
