entrega proyecto final 2

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,5 +1,7 @@
-$card-height: 20rem;
-$caret-width: 10rem;
+//Start: "Card custom variables"
+$card-height: 16rem;
+$card-bg: white;
+//End: "Card custom variables"
 
 $primary: rgba(0, 0, 0, 0.775);
 
