--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500;700&display=swap");
 /*!
  * Bootstrap v5.1.1 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -3434,13 +3435,13 @@ textarea.form-control-lg {
 }
 .dropdown-toggle::after {
   display: inline-block;
-  margin-left: 8.5rem;
-  vertical-align: 8.5rem;
+  margin-left: 0.255em;
+  vertical-align: 0.255em;
   content: "";
-  border-top: 10rem solid;
-  border-right: 10rem solid transparent;
+  border-top: 0.3em solid;
+  border-right: 0.3em solid transparent;
   border-bottom: 0;
-  border-left: 10rem solid transparent;
+  border-left: 0.3em solid transparent;
 }
 .dropdown-toggle:empty::after {
   margin-left: 0;
@@ -3577,13 +3578,13 @@ textarea.form-control-lg {
 }
 .dropup .dropdown-toggle::after {
   display: inline-block;
-  margin-left: 8.5rem;
-  vertical-align: 8.5rem;
+  margin-left: 0.255em;
+  vertical-align: 0.255em;
   content: "";
   border-top: 0;
-  border-right: 10rem solid transparent;
-  border-bottom: 10rem solid;
-  border-left: 10rem solid transparent;
+  border-right: 0.3em solid transparent;
+  border-bottom: 0.3em solid;
+  border-left: 0.3em solid transparent;
 }
 .dropup .dropdown-toggle:empty::after {
   margin-left: 0;
@@ -3598,13 +3599,13 @@ textarea.form-control-lg {
 }
 .dropend .dropdown-toggle::after {
   display: inline-block;
-  margin-left: 8.5rem;
-  vertical-align: 8.5rem;
+  margin-left: 0.255em;
+  vertical-align: 0.255em;
   content: "";
-  border-top: 10rem solid transparent;
+  border-top: 0.3em solid transparent;
   border-right: 0;
-  border-bottom: 10rem solid transparent;
-  border-left: 10rem solid;
+  border-bottom: 0.3em solid transparent;
+  border-left: 0.3em solid;
 }
 .dropend .dropdown-toggle:empty::after {
   margin-left: 0;
@@ -3622,8 +3623,8 @@ textarea.form-control-lg {
 }
 .dropstart .dropdown-toggle::after {
   display: inline-block;
-  margin-left: 8.5rem;
-  vertical-align: 8.5rem;
+  margin-left: 0.255em;
+  vertical-align: 0.255em;
   content: "";
 }
 .dropstart .dropdown-toggle::after {
@@ -3631,12 +3632,12 @@ textarea.form-control-lg {
 }
 .dropstart .dropdown-toggle::before {
   display: inline-block;
-  margin-right: 8.5rem;
-  vertical-align: 8.5rem;
+  margin-right: 0.255em;
+  vertical-align: 0.255em;
   content: "";
-  border-top: 10rem solid transparent;
-  border-right: 10rem solid;
-  border-bottom: 10rem solid transparent;
+  border-top: 0.3em solid transparent;
+  border-right: 0.3em solid;
+  border-bottom: 0.3em solid transparent;
 }
 .dropstart .dropdown-toggle:empty::after {
   margin-left: 0;
@@ -4405,9 +4406,9 @@ textarea.form-control-lg {
   display: flex;
   flex-direction: column;
   min-width: 0;
-  height: 20rem;
+  height: 16rem;
   word-wrap: break-word;
-  background-color: #fff;
+  background-color: white;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
@@ -11114,21 +11115,57 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+.card,
+.card-body,
+.card-text {
+  font-size: 0.9rem;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 300;
+}
+
+.card-title {
+  font-size: 1rem;
+  font-weight: 600;
+}
+
 .card-img-top {
   width: 100%;
-  height: 10vw;
+  height: 40%;
   object-fit: cover;
 }
 
-.btn-custom {
+.precioProd {
   display: flex;
-  flex-direction: column;
+  width: 68%;
+  justify-content: space-between;
   align-items: center;
-}
-.btn-custom a {
   position: absolute;
-  bottom: 0;
-  transform: translateY(-50%);
+  top: 90%;
+  left: 20%;
+  transform: translate(-27%, -50%);
+}
+.precioProd p {
+  height: auto;
+  font-size: 1.6rem;
+  margin: 0;
+}
+.precioProd i {
+  padding: 0 5%;
+  font-size: 1.6rem;
+}
+
+.btn-card-custom {
+  display: flex;
+  position: absolute;
+  top: 90%;
+  right: 0%;
+  transform: translate(-20%, -50%);
+}
+
+.cant-items {
+  width: 2rem;
+  border: solid 1px;
+  text-align: center;
 }
 
 * {
