--- a/scss/_partials/_cards.scss
+++ b/scss/_partials/_cards.scss
@@ -1,16 +1,55 @@
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500;700&display=swap");
+.card,
+.card-body,
+.card-text {
+  font-size: 0.9rem;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 300;
+}
+.card-title {
+  font-size: 1rem;
+  font-weight: 600;
+}
+
 .card-img-top {
   width: 100%;
-  height: 10vw;
+  height: 40%;
   object-fit: cover;
 }
 
-.btn-custom {
+.precioProd {
   display: flex;
-  flex-direction: column;
+  width: 68%;
+  justify-content: space-between;
   align-items: center;
-  a {
-    position: absolute;
-    bottom: 0;
-    transform: translateY(-50%);
+
+  position: absolute;
+  top: 90%;
+  left: 20%;
+  transform: translate(-27%, -50%);
+
+  p {
+    height: auto;
+    font-size: 1.6rem;
+    margin: 0;
   }
+  i {
+    padding: 0 5%;
+    font-size: 1.6rem;
+  }
+}
+
+.btn-card-custom {
+  display: flex;
+  position: absolute;
+  top: 90%;
+  right: 0%;
+  transform: translate(-20%, -50%);
+}
+
+.cant-items {
+  width: 2rem;
+
+  border: solid 1px;
+  text-align: center;
 }
