--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4404,7 +4404,7 @@ textarea.form-control-lg {
 .card {
   position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   min-width: 0;
   height: 16rem;
   word-wrap: break-word;
@@ -11115,9 +11115,50 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+.productos .container-custom,
+.productos .col-custom {
+  padding: 0;
+}
+.productos .container-custom {
+  display: flex;
+  justify-content: start;
+}
+.productos__head {
+  font-family: "Josefin Slab", serif;
+  font-weight: 600;
+  padding: 0 5%;
+}
+.productos__agrupacion {
+  display: flex;
+  padding: 0 4%;
+  justify-content: space-around;
+}
+
+.hero {
+  width: 100%;
+  height: 40%;
+}
+.hero img {
+  width: 100%;
+  height: 40%;
+  object-fit: fill;
+}
+
+.navbar-container-custom {
+  width: 100vw;
+}
+
+.navbar-brand,
+.navbar-container-custom {
+  font-size: 1.5rem;
+}
+
 .card,
 .card-body,
 .card-text {
+  margin: 0;
+  padding: 2%;
+  display: block;
   font-size: 0.9rem;
   font-family: "Josefin Sans", sans-serif;
   font-weight: 300;
@@ -11163,13 +11204,8 @@ textarea.form-control-lg {
 
 .cant-items {
   width: 2rem;
-  border: solid 1px;
+  border: solid 1px #d8d3d2;
   text-align: center;
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
 }
 
 /*# sourceMappingURL=styles.css.map */
