--- a/scss/_partials/_cards.scss
+++ b/scss/_partials/_cards.scss
@@ -2,6 +2,9 @@
 .card,
 .card-body,
 .card-text {
+  margin: 0;
+  padding: 2%;
+  display: block;
   font-size: 0.9rem;
   font-family: "Josefin Sans", sans-serif;
   font-weight: 300;
@@ -50,7 +53,6 @@
 
 .cant-items {
   width: 2rem;
-
-  border: solid 1px;
+  border: solid 1px rgb(216, 211, 210);
   text-align: center;
 }
