--- a/scss/_partials/_cards.scss
+++ b/scss/_partials/_cards.scss
@@ -9,6 +9,7 @@
   font-family: "Josefin Sans", sans-serif;
   font-weight: 300;
 }
+
 .card-title {
   font-size: 1rem;
   font-weight: 600;
@@ -55,4 +56,9 @@
   width: 2rem;
   border: solid 1px rgb(216, 211, 210);
   text-align: center;
+}
+
+.col-custom {
+  padding-left: 0;
+  padding-right: 0;
 }
