--- a/scss/_partials/_navbar.scss
+++ b/scss/_partials/_navbar.scss
@@ -1,3 +1,6 @@
+@use "../../node_modules/bootstrap/scss/mixins/gradients" as *;
+@use "../../node_modules/bootstrap/scss/mixins/container" as *;
+
 $fontSize: 1.5rem;
 //Modificaciones a estilos del navBar
 .navbar-container-custom {
