--- a/scss/sections/_productos.scss
+++ b/scss/sections/_productos.scss
@@ -1,12 +1,19 @@
 .seccion-productos {
   padding-top: 2%;
-  #desayuno {
-    background-image: url(/assets/img/avocado_toast.jpeg);
-  }
+
   #almuerzo {
     background-image: url(/assets/img/cagliari.jpeg);
   }
 
+  .desayunoBackground {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-image: url(/assets/img/avocado_toast.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    justify-content: center;
+  }
   #desayuno,
   #almuerzo,
   #cena {
