--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,14 +6,16 @@
 .seccion-productos #almuerzo {
   background-image: url(/assets/img/cagliari.jpeg);
 }
-.seccion-productos .desayunoBackground {
+.seccion-productos .productoBackground {
   display: flex;
   width: 100%;
   height: 100%;
   background-image: url(/assets/img/avocado_toast.jpeg);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   justify-content: center;
+  background-position: center;
+  cursor: pointer;
 }
 .seccion-productos #desayuno,
 .seccion-productos #almuerzo,
@@ -11175,6 +11177,29 @@ textarea.form-control-lg {
 .navbar-brand,
 .navbar-container-custom {
   font-size: 1.5rem;
+}
+
+#cart-navBar {
+  display: flex;
+  align-items: center;
+}
+#cart-navBar #cart-icon {
+  display: flex;
+  padding-left: 0.4rem;
+  align-items: center;
+  justify-content: center;
+}
+#cart-navBar #cart-icon .cart-count-circle {
+  position: relative;
+  transform: translate(-50%, -50%);
+  top: 1.2rem;
+  right: 5%;
+  text-align: center;
+  font-size: 1.1rem;
+  width: 1.1rem;
+  height: 1.1rem;
+  border-radius: 50%;
+  background-color: #a52a2a;
 }
 
 body {
