--- a/scss/sections/_productos.scss
+++ b/scss/sections/_productos.scss
@@ -5,14 +5,16 @@
     background-image: url(/assets/img/cagliari.jpeg);
   }
 
-  .desayunoBackground {
+  .productoBackground {
     display: flex;
     width: 100%;
     height: 100%;
     background-image: url(/assets/img/avocado_toast.jpeg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     justify-content: center;
+    background-position: center;
+    cursor: pointer;
   }
   #desayuno,
   #almuerzo,
